@@ -18,12 +18,12 @@ public class AdminProductImageService {
 
     @Value("${app.uploadDir}")
     private String UPLOAD_DIR;
-     // private String UPLOAD_DIR = "./data/productImages/";
+    // private String UPLOAD_DIR = "./data/productImages/";
 
     public String uploadImage(String fileName, InputStream inputStream) {
         String newFileName = SlugifyUtils.slugifyFileName(fileName);
-        newFileName = ExistingFileRenameUtils.renameFileIfExists(Path.of("/opt/app"+UPLOAD_DIR), newFileName);
-        Path filePath = Paths.get("/opt/app"+UPLOAD_DIR).resolve(newFileName);
+        newFileName = ExistingFileRenameUtils.renameFileIfExists(Path.of("/opt/app" + UPLOAD_DIR), newFileName);
+        Path filePath = Paths.get("/opt/app" + UPLOAD_DIR).resolve(newFileName);
         try (OutputStream outputStream = Files.newOutputStream(filePath)) {
             inputStream.transferTo(outputStream);
         } catch (IOException e) {
